--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <title>Etch-a-sketch</title>
     </head>
     <body>
-        
+        <div class="header">Etch-a-sketch</div>
     </body>
 </html>
