--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     </head>
     <body>
         <div class="header">Etch-a-sketch</div>
+        <div class="game-container">
+            <div class="sketch-board"></div>
+        </div>
     </body>
 </html>
