--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <body>
         <div class="header">Etch-a-sketch</div>
         <div class="game-container">
+            <div class="settings">
+                <input class="color-wheel" type="color" id="#333333">
+                <button class="colorMode btn" id="colorMode">Color mode</button>
+                <button class="rainbowMode btn" id="rainbowMode">Rainbow mode</button>
+                <button class="eraser btn" id="eraser">Eraser</button>
+                <button class="reset btn" id="reset">Reset</button>
+                <div class="slider-container">
+                    <p class="slider-text">16 x 16</p>
+                    <input type="range" min="1" max="64" value="16" class="slider" id="slider">
+                </div>
+            </div>
             <div class="sketch-board"></div>
         </div>
     </body>
